--- a/client/env.example
+++ b/client/env.example
@@ -1,3 +1,2 @@
-# Supabase Configuration for Frontend
-VITE_SUPABASE_URL=https://hlvyjmkzraahuhheqbqd.supabase.co
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here 
+# Google OAuth Configuration for Frontend
+VITE_GOOGLE_CLIENT_ID=your_google_client_id_here 
