--- a/env.example
+++ b/env.example
@@ -4,8 +4,13 @@ DATABASE_URL=postgresql://localhost:5432/val_journey
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
-# JWT Secret (will be auto-generated if not provided)
-JWT_SECRET=your_jwt_secret_here
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_CALLBACK_URL=http://localhost:5000/auth/google/callback
+
+# Session Configuration
+SESSION_SECRET=your_session_secret_here
 
 # Server Configuration
 PORT=5000
